kubernetes/mini/core/rook-ceph-system/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph-system
  labels:
    pod-security.kubernetes.io/enforce: privileged
    goldilocks.fairwinds.com/enabled: "false"
annotations:
  kustomize.toolkit.fluxcd.io/prune: disabled
