kubernetes/mini/core/rook-ceph-system/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rook-ceph-system-allow-all
  namespace: rook-ceph-system
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - cluster
    - fromEndpoints:
        - {}
  egress:
    - toEndpoints:
        - {}
    - toEntities:
        - cluster
